shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/RedirectedException.kt
package com.example.osmapi.core.common.errors

import io.ktor.utils.io.errors.IOException

class RedirectedException(reason:String) : IOException(message=reason) {
}